layout is now generic; bootstrap collapse fixed data-parent

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -85,6 +85,10 @@ body {
 					opacity: 0.5;
 					vertical-align: top;
 			}
+
+			.more-content {
+				float:right;
+			}
 		}
 	}
 
@@ -97,9 +101,9 @@ body {
 
 		a {
 			border-bottom: 1px solid #202020;
-    	border-top: 1px solid #333333;
-  	 	color: #777777;
-    	padding: 10px 0 10px 39px;
+	    	border-top: 1px solid #333333;
+	  	 	color: #777777;
+	    	padding: 10px 0 10px 39px;
 		}
 	}
 
@@ -116,7 +120,7 @@ body {
 	.second-lvl > li:not(.active-second-lvl) {
 		& > a:hover {
 			background-color: #272727 !important;
-			color:;
+			color:#aaa;
 		}
 	}
 }
